fixed search bar and account button alignement

--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -10,14 +10,16 @@ Navbar
 ========================================================================== */
 
 .searchBarArea {
-  width: 350pt;
+  width: 40vw;
   border: solid black 0.1em;
   display: grid;
   grid-template-columns: 85% 15%;
+  /*
   min-width: 120pt;
   min-height: 20pt;
   max-width: 300pt;
   max-height: 30pt;
+  */
   margin-right: 10pt;
   margin-top: 10pt;
   margin-bottom: 10pt;
@@ -69,6 +71,11 @@ Navbar
   width: 1.75em;
 }
 
+.nav-item {
+  display: -webkit-flex;
+  justify-content: center;
+}
+
 .navbar {
   padding: 0.2rem 1rem;
 
@@ -101,4 +108,24 @@ Logo styles
   vertical-align: middle;
   background: url('../../../content/images/logo_dranse_v1.png') no-repeat center center;
   background-size: contain;
+}
+
+@media only screen and(max-width: 767px) {
+  .searchBarArea {
+    width: 100vw;
+    height: 30px;
+    min-width: none;
+    min-height: none;
+    max-width: none;
+    max-height: 30pt;
+
+    margin-right: 10pt;
+    margin-top: 10pt;
+    margin-bottom: 10pt;
+  }
+
+  .searchBar {
+    width: 100%;
+    height: 30px;
+  }
 }
